syntax = "proto3";

option go_package = "github.com/zmicro-team/zim/proto/group";
package github.com.zmicro.team.zim.proto.group;

service Group {
  rpc Create(CreateReq) returns (CreateRsp) {}
  rpc GetJoinedGroups(GetJoinedGroupsReq) returns (GetJoinedGroupsRsp) {}
  rpc Sync(SyncReq) returns (SyncRsp) {}
}

message GroupInfo {
  // 群主
  string owner = 1;
  // 群名称
  string name = 2;
  string group_id = 3;
  string notice = 4;
  string introduction = 5;
  string avatar = 6;
  int64 created_at = 7;
  int64 updated_at = 8;
  int32 type = 9;
}

message CreateReq {
  // 群主
  string owner = 1;
  // 成员
  repeated string members = 2;
  // 群名称
  string name = 3;
  // 群ID，如果不传，zim会生成一个群ID
  string group_id = 4;
  string notice = 5;
  string introduction = 6;
  string avatar = 7;
}

message CreateRsp {
  // 群ID
  string group_id = 1;
}

message GetJoinedGroupsReq {
  string uin = 1;
}

message GetJoinedGroupsRsp {
  repeated GroupInfo groups = 1;
}

message SyncReq {
  string uin = 1;
  string device_id = 2;
  int64 offset = 3;
  int64 limit = 4;
}

message SyncRsp {
  repeated GroupInfo list = 1;
}
